# goToVladi

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  alembic.dist.ini  alembic.ini  docker-compose.yaml  fastadmin.env  gunicorn.conf.py  pyproject.toml  todo.list.yaml  todo.txt
config_dist/: config.yml  logging.yml
goToVladi/: __main__.py
goToVladi/api/: __init__.py  main.py
goToVladi/api/admin/: __init__.py
goToVladi/api/apps/: __init__.py  redirect.py
goToVladi/api/di/: __init__.py  auth.py  config.py
goToVladi/api/utils/: url.py
goToVladi/bot/apps/: __init__.py  router.py
goToVladi/bot/di/: __init__.py  bot.py  dp.py  jinja.py
goToVladi/bot/dialogs/: __init__.py  cooperation.py  main_menu.py  region.py
goToVladi/bot/filters/: admin.py  db_settings.py  region.py  superuser.py  user.py  workers.py
goToVladi/bot/handlers/: __init__.py  base_commands.py  commands.py
goToVladi/bot/middlewares/: __init__.py  additional_message.py  config.py  context_data.py  logging.py  region.py  user.py
goToVladi/bot/states/: car_rent.py  cooperation.py  hotel.py  massage.py  sea_recreation.py  spa.py  start.py
goToVladi/bot/utils/: buttons.py  dialog.py  events.py  exceptions.py  hints.py  media.py  media_matching.py  message.py  router.py  states.py  states_factory.py  ui.py
goToVladi/bot/views/: add_message.py  buttons.py  commands.py  media_group.py
goToVladi/core/di/: __init__.py  config.py  (+6 more)
goToVladi/flaskadmin/: __main__.py  app.py  wsgi.py
goToVladi/mq/: __main__.py  run.py
tests/mocks/: aiogram.py
tests/pytest/: conftest.py
(+446 files in other folders)
